<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_to_storyapp">Welcome to StoryApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="sign_in">Sign In</string>
    <string name="text_register">Don\'t have account? Register Now</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_signin">Have an account? Back to Sign In</string>
    <string name="name">Name</string>
    <string name="title_activity_story">StoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="more">More</string>
    <string name="sign_out">Sign Out</string>
    <string name="camera_x">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="retry">Retry</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>